--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -61,11 +61,11 @@ shadow-opacity       = 0.25;
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude       = [
   #"! name~=''",
-  "name    = 'Plank'",
+  "name   *= 'Plank'",
   "name   *= 'compton'",
   "name   *= 'picom'",
-  "name   *= 'tint2'",
-  "class_g = 'Tint2'",
+  "name   *= 'eyecandy.tint2'",
+  "name   *= 'statint.tint2'",
   "class_g = 'conky'",
   "class_g = 'GLava'",
   "class_g = 'Cairo-clock'",
