--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -652,6 +652,7 @@ image_backend="w3m"
 #       wallpaper will be used.
 image_source="auto"
 #image_source="${HOME}/.config/neofetch/arch.png"
+#image_source="${HOME}/.config/neofetch/artix.png"
 #image_source="${HOME}/.config/neofetch/gentoo.png"
 #image_source="${HOME}/.config/neofetch/ob.png"
 
